--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "backbone-autocomplete",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Dan Peddle <dan@flarework.com>",
+  "license": "MIT",
   "dependencies": {
     "backbone": "~1.1.2"
   }
