Updated Backbone to 1.2.1, pulled out Underscore to allow npm to do dependency de-duping, added README to example to show how to build using Browserify

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "author": "Dan Peddle <dan@flarework.com>",
   "license": "MIT",
   "dependencies": {
-    "backbone": "~1.1.2",
-    "tap": "~0.4.8"
+    "backbone": "~1.2.1",
+    "tap": "~0.4.8",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "cheerio": "~0.13.1"
